hphp/hack/test/typecheck/isarray/is_array_bad.php.like_types.exp
File "is_array_bad.php", line 6, characters 10-11:
Invalid return type (Typing[4110])
  File "is_array_bad.php", line 4, characters 41-56:
  Expected `dict<int, int>`
  File "is_array_bad.php", line 5, characters 13-27:
  But got `(vec_or_dict<arraykey, T#1> & ~dict<int, string>)` from the argument to this \HH\is_php_array test
File "is_array_bad.php", line 11, characters 10-11:
Invalid return type (Typing[4110])
  File "is_array_bad.php", line 9, characters 41-54:
  Expected `vec<string>`
  File "is_array_bad.php", line 10, characters 13-27:
  But got `(vec_or_dict<arraykey, T#1> & ~dict<int, string>)` from the argument to this \HH\is_php_array test
